--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodejs ./bin/www"
   },
   "engines": {
     "node": "0.10.x",
@@ -21,5 +21,8 @@
     "sequelize": "^3.1.0",
     "serve-favicon": "~2.1.3",
     "sqlite3": "^3.0.8"
+  },
+  "devDependencies": {
+    "sqlite3": "~2.2.7"
   }
 }
