--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
+    "method-override": "^2.3.3",
     "morgan": "~1.3.0",
     "pg": "^4.3.0",
     "sequelize": "^3.1.0",
