--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodejs ./bin/www"
   },
   "engines": {
     "node": "0.10.x",
@@ -19,8 +19,9 @@
     "express-session": "^1.11.2",
     "method-override": "^2.3.3",
     "morgan": "~1.3.0",
-    "pg": "^4.3.0",
-    "sequelize": "^3.1.0",
+    "pg": "^4.1.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "~1.7.0",
     "serve-favicon": "~2.1.3",
     "sqlite3": "^3.0.8"
   },
