--- a/package.json
+++ b/package.json
@@ -24,7 +24,21 @@
     "morgan": "~1.3.0",
     "pg": "^4.1.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "~1.7.0",
+    "sequelize": "^3.0.0",
     "serve-favicon": "~2.1.3"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gpscasso/quiz-2015.git"
+  },
+  "keywords": [
+    "quiz"
+  ],
+  "author": "gpscasso",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gpscasso/quiz-2015/issues"
+  },
+  "homepage": "https://github.com/gpscasso/quiz-2015"
 }
