--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.11.2",
     "method-override": "^2.3.3",
     "morgan": "~1.3.0",
+    "multer": "^0.1.8",
     "pg": "^4.1.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.0.0",
